--- a/《恶意代码防范技术原理》/概述.md
+++ b/《恶意代码防范技术原理》/概述.md
@@ -3,6 +3,7 @@
 恶意代码（Malicious Code），它是一种违背目标系统安全策略的程序代码，**会造成目标系统信息泄露、资源滥用，破坏系统的完整性及可用性**。
 它能够经过存储介质或网络进行传播，**从一台计算机系统传到另外一台计算机系统，未经授权认证访问或破坏计算机系统**。  
 
+
 恶意代码的种类主要包括：
 + 计算机病毒（Computer Virus）
 + 蠕虫（Worms）
@@ -11,10 +12,17 @@
 + 细菌（Bacteria）
 + 恶意脚本（Malicious Scripts）
 + 恶意ActiveX控件
-+ 间谍软件（Spyware）等
++ 间谍软件（Spyware）等  
 
-
-
+按照恶意代码的传播特性，分为两大类：
++ 被动传播
+  + 计算机病毒
+  + 特洛伊木马
+  + 间谍软件
+  + 逻辑炸弹
++ 主动传播
+  + 网络蠕虫
+  + 其他
 
 
 ## 
