--- a/《恶意代码防范技术原理》/概述.md
+++ b/《恶意代码防范技术原理》/概述.md
@@ -24,5 +24,10 @@
   + 网络蠕虫
   + 其他
 
-
+***
+1984年，Cohen在美国国家计算机安全会议上演示了病毒的实验。人们普遍认为，世界上首例病毒是由他创造的。  
+1988年，美国康奈尔大学的学生Morris制造了世界上首例“网络蠕虫”，俗称“小莫里斯蠕虫”，该蠕虫一夜之间攻击了网上约6200台计算机。  
+1996年，出现Word宏病毒  
+1998年，出现CIH病毒，特洛伊木马已达到数万种  
+最近几年，新的破坏力强的网络蠕虫相继出现，如红色代码，Slammer蠕虫，冲击波蠕虫等，此外恶意的间谍软件（Spyware）也出现。
 ## 
